Modificato stile del body

--- a/cpp.html
+++ b/cpp.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="css/styles.css">		<!-- Stili CSS per il menu -->
 </head>
 
-<body>
+<body class="topnav">
 
 	<header>
 		<a href="#home" class="logo" data-scroll>Esercizi C++:</a>
@@ -27,7 +27,7 @@
 		</nav>
 	</header>
 
-	<br><br><br><br><br><br>
+	<br><br><br><br>
 
 	<!-- CAPITOLO 1-->
 	<div class="capitolo">
