Aggiornati e aggiunti esercizi sui vettori [80% completato]

--- a/cpp.html
+++ b/cpp.html
@@ -700,10 +700,96 @@
 		<!--Esercizio con listati all'interno del testo-->
 		<h2 id="cap2"> Capitolo 2 - Array (vettori) </h2>
 
+		<div class="esercizio">
+			<!--Esercizio senza soluzione-->
+			<span class="numero">Es. 0</span>
+			<span class="titolo">Raddoppia gli elementi</span>
+			<div class="testo">
+				Inserisci 10 numeri interi usando un vettore, modifica questi elementi raddoppiandoli, poi stampa gli elementi modificati.
+			</div>
+
+		</div>
 
 		<div class="esercizio">
 			<!--Esercizio senza soluzione-->
 			<span class="numero">Es. 1</span>
+			<span class="titolo">Minimo, massimo e media di un vettore </span>
+			<div class="testo">
+				Scrivere un programma in cui si carica un vettore di dimensione costante. Successivamente calcolare il
+				min, max e media e visualizzarlo
+			</div>
+
+		</div>
+		<div class="esercizio">
+			<!--Esercizio senza soluzione-->
+			<span class="numero">Es. 2</span>
+			<span class="titolo">Minimo e massimo vettore numeri casuali</span>
+			<div class="testo">
+				Dichiarare un vettore di lunghezza M (costante) Genera casualmente N numeri compresi tra 1 e 1000 (N
+				deve essere maggiore di 0 e minore o uguale ad M, altrimenti cicla finche non superi un numero massimo
+				di tentativi definito in una costante) e memorizzali nel vettore. Calcolare l’elemento minimo e massimo
+				del vettore.
+			</div>
+
+		</div>
+
+		<div class="esercizio">
+			<!--Esercizio senza soluzione-->
+			<span class="numero">Es. 3</span>
+			<span class="titolo">Media di numeri in POSIZIONE pari e dispari</span>
+			<div class="testo">
+				Caricare un vettore di numeri interi. Stampare la media di tutti i numeri in posizione pari e la media
+				di tutti i numeri in posizione dispari.
+			</div>
+
+		</div>
+
+
+		<div class="esercizio">
+			<!--Esercizio senza soluzione-->
+			<span class="numero">Es. 4</span>
+			<span class="titolo">Visualizza solo una volta</span>
+			<div class="testo">
+				Leggi da input N numeri interi e memorizzali in un array.<br>
+				Stampa i valori dell'array in sequenza senza stampare lo stesso numero due volte<br>
+				es. se il vettore contiene [15, 3, 5, 3, 11, 5, 15, 5, 15,11]<br>
+				deve essere stampato [15, 3, 5, 11]
+			</div>
+
+		</div>
+		<div class="esercizio">
+			<!--Esercizio senza soluzione-->
+			<span class="numero">Es. 5</span>
+			<span class="titolo">Media dispari e media pari</span>
+			<div class="testo">
+				Caricare un vettore di interi. Stampare la media di tutti i numeri dispari e la media di tutti i numeri
+				pari presenti nel vettore
+			</div>
+
+		</div>
+		<div class="esercizio">
+			<!--Esercizio senza soluzione-->
+			<span class="numero">Es. 6</span>
+			<span class="titolo">Lancio dei dadi</span>
+			<div class="testo">
+				Calcolare la frequenza di n lanci di un dado.
+				Utilizzare il vettore.
+			</div>
+
+		</div>
+		<div class="esercizio">
+			<!--Esercizio senza soluzione-->
+			<span class="numero">Es. 7</span>
+			<span class="titolo">E' presente il nome?</span>
+			<div class="testo">
+				Caricare un vettore di stringhe di dimensioni 15.<br>
+				Chiedere all'utente un nome e verificare se il nome è presente nel vettore.
+			</div>
+
+		</div>
+		<div class="esercizio">
+			<!--Esercizio senza soluzione-->
+			<span class="numero">Es. 8</span>
 			<span class="titolo">Operazioni sui vettori </span>
 			<div class="testo">
 				Definire un vettore di dimensione massima 100 poi chiedere all’utente la dimensione n del vettore e
@@ -725,115 +811,166 @@
 		</div>
 		<div class="esercizio">
 			<!--Esercizio senza soluzione-->
-			<span class="numero">Es. 2</span>
-			<span class="titolo">Minimo e massimo di una sequenza, senza vettori</span>
-			<div class="testo">
-				Calcolare il minimo ed il massimo di una sequenza di n numeri, senza utilizzare nessun vettore.
-			</div>
-
-		</div>
-		<div class="esercizio">
-			<!--Esercizio senza soluzione-->
-			<span class="numero">Es. 3</span>
-			<span class="titolo">Minimo e massimo di una sequenza, senza vettori</span>
-			<div class="testo">
-				Calcolare il minimo ed il massimo di una sequenza di n numeri, senza utilizzare nessun vettore.
-			</div>
-
-		</div>
-		<div class="esercizio">
-			<!--Esercizio senza soluzione-->
-			<span class="numero">Es. 4</span>
-			<span class="titolo">Minimo e massimo di una sequenza, senza vettori</span>
-			<div class="testo">
-				Calcolare il minimo ed il massimo di una sequenza di n numeri, senza utilizzare nessun vettore.
-			</div>
-
-		</div>
-		<div class="esercizio">
-			<!--Esercizio senza soluzione-->
-			<span class="numero">Es. 5</span>
-			<span class="titolo">Minimo e massimo di una sequenza, senza vettori</span>
-			<div class="testo">
-				Calcolare il minimo ed il massimo di una sequenza di n numeri, senza utilizzare nessun vettore.
-			</div>
-
-		</div>
-		<div class="esercizio">
-			<!--Esercizio senza soluzione-->
-			<span class="numero">Es. 6</span>
-			<span class="titolo">Minimo e massimo di una sequenza, senza vettori</span>
-			<div class="testo">
-				Calcolare il minimo ed il massimo di una sequenza di n numeri, senza utilizzare nessun vettore.
-			</div>
-
-		</div>
-		<div class="esercizio">
-			<!--Esercizio senza soluzione-->
-			<span class="numero">Es. 7</span>
-			<span class="titolo">Minimo e massimo di una sequenza, senza vettori</span>
-			<div class="testo">
-				Calcolare il minimo ed il massimo di una sequenza di n numeri, senza utilizzare nessun vettore.
-			</div>
-
-		</div>
-		<div class="esercizio">
-			<!--Esercizio senza soluzione-->
-			<span class="numero">Es. 8</span>
-			<span class="titolo">Minimo e massimo di una sequenza, senza vettori</span>
-			<div class="testo">
-				Calcolare il minimo ed il massimo di una sequenza di n numeri, senza utilizzare nessun vettore.
-			</div>
-
-		</div>
-		<div class="esercizio">
-			<!--Esercizio senza soluzione-->
 			<span class="numero">Es. 9</span>
-			<span class="titolo">Minimo e massimo di una sequenza, senza vettori</span>
+			<span class="titolo">Copiare elementi positivi</span>
 			<div class="testo">
-				Calcolare il minimo ed il massimo di una sequenza di n numeri, senza utilizzare nessun vettore.
+				Caricare un vettore V1 di lunghezza N. Copiare gli elementi positivi presenti nel vettore V1 nel vettore
+				V2.<br>Stampare gli elementi di V2.<br>
+				Visualizzare gli elementi di V2 in ordine inverso
 			</div>
 
 		</div>
 		<div class="esercizio">
 			<!--Esercizio senza soluzione-->
 			<span class="numero">Es. 10</span>
-			<span class="titolo">Minimo e massimo di una sequenza, senza vettori</span>
+			<span class="titolo">Copiare 2 vettori in un terzo</span>
 			<div class="testo">
-				Calcolare il minimo ed il massimo di una sequenza di n numeri, senza utilizzare nessun vettore.
+				Caricare due vettori V1 e V2, rispettivamente di lunghezza N ed M.<br>Caricare in un terzo vettore V3
+				(di lunghezza N+M) il primo vettore e il secondo vettore.
 			</div>
 
 		</div>
+
 		<div class="esercizio">
 			<!--Esercizio senza soluzione-->
 			<span class="numero">Es. 11</span>
-			<span class="titolo">Minimo e massimo di una sequenza, senza vettori</span>
+			<span class="titolo">Operazioni numeri casuali - vettori</span>
 			<div class="testo">
-				Calcolare il minimo ed il massimo di una sequenza di n numeri, senza utilizzare nessun vettore.
+				Generare in modo casuale un insieme di 12 valori interi compresi tra 1 e 100 e memorizzarli in un
+				vettore (A). <br>Visualizzare gli elementi di A. <br>Successivamente copiare tali elementi (incrementati
+				di 1) in un altro vettore (B) in ordine inverso. <br>Visualizzare gli elementi di B.
 			</div>
 
 		</div>
 		<div class="esercizio">
 			<!--Esercizio senza soluzione-->
 			<span class="numero">Es. 12</span>
-			<span class="titolo">Minimo e massimo di una sequenza, senza vettori</span>
+			<span class="titolo">Stipendi di N dipendenti</span>
 			<div class="testo">
-				Calcolare il minimo ed il massimo di una sequenza di n numeri, senza utilizzare nessun vettore.
+				Dati gli stipendi di N dipendenti, realizzare un programma che li memorizzi in un vettore e visualizzi:
+
+				<li>posizione dello stipendio massimo</li>
+				<li>la media delgi stipendi</li>
+				<li>incrementare tutti gli stipendi del 10%</li>
 			</div>
 
 		</div>
 		<div class="esercizio">
 			<!--Esercizio senza soluzione-->
 			<span class="numero">Es. 13</span>
-			<span class="titolo">Minimo e massimo di una sequenza, senza vettori</span>
+			<span class="titolo">Presenze mensili in un albergo</span>
 			<div class="testo">
-				Calcolare il minimo ed il massimo di una sequenza di n numeri, senza utilizzare nessun vettore.
+				In un array di 12 elementi sono memorizzate le presenza mensili in un albergo nel corso dell'anno.<br>
+				Calcola:<br>
+
+				<li>la media di presenze nel corso dell'intero anno</li>
+				<li>il numero totale di presenze nei mesi estivi (6,7,8) che rappresentano il mese di luglio, agosto e
+					settembre</li>
+				<li>Il mese in cui è stato registrato il massimo di presenze</li>
+				<li>il mese in cui è registrato il numero minimo di presenze</li>
+				<li>la media delle presenze escludendo i mesi estivi</li>
 			</div>
 
 		</div>
 		<div class="esercizio">
 			<!--Esercizio senza soluzione-->
 			<span class="numero">Es. 14</span>
+			<span class="titolo">Aumentare in percentuale gli elementi di un vettore</span>
+			<div class="testo">
+				Dato un vettore precaricato.<br>Chiedere all'utente una percentuale e aumentare i numeri del vettore di
+				quella percentuale.
+			</div>
+
+		</div>
+		<div class="esercizio">
+			<!--Esercizio senza soluzione-->
+			<span class="numero">Es. 15</span>
+			<span class="titolo">Elemento massimo vettore di stringhe</span>
+			<div class="testo">
+				Dato un vettore di stringhe, trovare l'elemento massimo
+			</div>
+
+		</div>
+		<div class="esercizio">
+			<!--Esercizio senza soluzione-->
+			<span class="numero">Es. 16</span>
+			<span class="titolo">Vettore tutto uguale?</span>
+			<div class="testo">
+				Caricare un vettore con N numeri interi.<br> Visualizzare un messaggio che indica che il vettore sia
+				formato
+				da tutti numeri uguali oppure no.<br>
+
+				Svolgere l'esercizio prima utilizzando un ciclo for e poi un while cioè uscendo dal ciclo quando trovo
+				due elementi diversi.
+			</div>
+
+		</div>
+		<div class="esercizio">
+			<!--Esercizio senza soluzione-->
+			<span class="numero">Es. 17</span>
+			<span class="titolo">Vettori paralleli età e nomi studenti</span>
+			<div class="testo">
+				Caricare due vettori di lunghezza 10 contenenti uno l'età degli studenti e l'altro i nomi.<br>
+				Visualizzare il nome dello studente con l'età massima
+			</div>
+
+		</div>
+		<div class="esercizio">
+			<!--Esercizio senza soluzione-->
+			<span class="numero">Es. 18</span>
+			<span class="titolo">Vettori paralleli e operazioni basilari</span>
+			<div class="testo">
+				Caricare due vettori di lunghezza N (costante) uno con i nomi di studenti e l'altro con le rispettive
+				età<br>
+
+				Dopo aver caricato visualizzare i nomi degli studenti maggiorenni.<br>
+
+				Successivamente visualizzare il nome dello studente con età max, quello con età min e l'età media tra
+				tutti gli studenti.
+			</div>
+
+		</div>
+
+		<div class="esercizio">
+			<!--Esercizio senza soluzione-->
+			<span class="numero">Es. 19</span>
+			<span class="titolo">Media di positivi/negativi a seconda dei numeri nella sequenza</span>
+			<div class="testo">
+				Dati in input una sequenza di N interi da inserire in un vettore di lunghezza M (costante).<br>Calcolare
+				la media solo dei numeri positivi.<br>Se nella sequenza è presente il numero 100, non bisogna
+				calcolare la media ma la somma dei numeri negativi presenti nell’intera sequenza.<br><br>
+				Es.<br>Se la sequenza è -4 5 8 12 -12 0 la media è 8,333<br>
+				<br>
+				Se la sequenza è -3 -5 -6 -10 0 la media è zero<br>
+				<br>
+				Se la sequenza è -3 -4 -10 30 100 -5 0 devo visualizzare la somma Negativi -22
+			</div>
+
+		</div>
+		<div class="esercizio">
+			<!--Esercizio senza soluzione-->
+			<span class="numero">Es. 20</span>
+			<span class="titolo">Unione alternata di due vettori in un terzo </span>
+			<div class="testo">
+				Caricare due vettori di interi V1 e V2, rispettivamente di lunghezza N ed M. <br>Caricare in un terzo
+				vettore V3 (di lunghezza N+M) gli elementi del vettore V1 alternandoli con gli elementi di V2.<br>
+
+				Cioè V3 deve contenere il primo elemento di V1, poi il primo elemento di V2, poi il secondo elemento di
+				V1, il seconde elemento di V2 e così via.<br>Stare attenti al fatto che le dimensioni dei due vettori
+				non
+				sono uguali, quindi uno potrebbe terminare gli elementi e l'altro no.<br>In tal caso ricopiare tutti gli
+				elementi rimanenti.<br>
+
+				Es. <br>V1 contiene [1,3,10,30,20] V2 contiene [44,25,3]
+				<br>
+				V3 deve essere [1,44,3,25,10,3,30,20]
+			</div>
+
+		</div>
+
+		<div class="esercizio">
+			<!--Esercizio senza soluzione-->
+			<span class="numero">Es. 21</span>
 			<span class="titolo">Minimo e massimo di una sequenza, senza vettori</span>
 			<div class="testo">
 				Calcolare il minimo ed il massimo di una sequenza di n numeri, senza utilizzare nessun vettore.
@@ -842,13 +979,68 @@
 		</div>
 		<div class="esercizio">
 			<!--Esercizio senza soluzione-->
-			<span class="numero">Es. 15</span>
+			<span class="numero">Es. 22</span>
 			<span class="titolo">Minimo e massimo di una sequenza, senza vettori</span>
 			<div class="testo">
 				Calcolare il minimo ed il massimo di una sequenza di n numeri, senza utilizzare nessun vettore.
 			</div>
 
 		</div>
+		<div class="esercizio">
+			<!--Esercizio senza soluzione-->
+			<span class="numero">Es. 23</span>
+			<span class="titolo">Minimo e massimo di una sequenza, senza vettori</span>
+			<div class="testo">
+				Calcolare il minimo ed il massimo di una sequenza di n numeri, senza utilizzare nessun vettore.
+			</div>
+
+		</div>
+		<div class="esercizio">
+			<!--Esercizio senza soluzione-->
+			<span class="numero">Es. 24</span>
+			<span class="titolo">Minimo e massimo di una sequenza, senza vettori</span>
+			<div class="testo">
+				Calcolare il minimo ed il massimo di una sequenza di n numeri, senza utilizzare nessun vettore.
+			</div>
+
+		</div>
+		<div class="esercizio">
+			<!--Esercizio senza soluzione-->
+			<span class="numero">Es. 25</span>
+			<span class="titolo">Minimo e massimo di una sequenza, senza vettori</span>
+			<div class="testo">
+				Calcolare il minimo ed il massimo di una sequenza di n numeri, senza utilizzare nessun vettore.
+			</div>
+
+		</div>
+		<div class="esercizio">
+			<!--Esercizio senza soluzione-->
+			<span class="numero">Es. 26</span>
+			<span class="titolo">Minimo e massimo di una sequenza, senza vettori</span>
+			<div class="testo">
+				Calcolare il minimo ed il massimo di una sequenza di n numeri, senza utilizzare nessun vettore.
+			</div>
+
+		</div>
+		<div class="esercizio">
+			<!--Esercizio senza soluzione-->
+			<span class="numero">Es. 27</span>
+			<span class="titolo">Minimo e massimo di una sequenza, senza vettori</span>
+			<div class="testo">
+				Calcolare il minimo ed il massimo di una sequenza di n numeri, senza utilizzare nessun vettore.
+			</div>
+
+		</div>
+		<div class="esercizio">
+			<!--Esercizio senza soluzione-->
+			<span class="numero">Es. 28</span>
+			<span class="titolo">Minimo e massimo di una sequenza, senza vettori</span>
+			<div class="testo">
+				Calcolare il minimo ed il massimo di una sequenza di n numeri, senza utilizzare nessun vettore.
+			</div>
+
+		</div>
+
 
 
 	</div>
