Rimosso index-2.html

--- a/networking/esercizi_subnetting/ccna_salary.html
+++ b/networking/esercizi_subnetting/ccna_salary.html
@@ -12,9 +12,9 @@
 	<link rel="stylesheet" type="text/css" href="header_footer.css">
     </head>
     <body>
-<span id='titlename'><a href="index-2.html">SubnettingPractice.com</a></span> The most extensive subnetting practice site on the web!
+<span id='titlename'><a href="index.html">SubnettingPractice.com</a></span> The most extensive subnetting practice site on the web!
 		<ul id='nav'>
-			<li><a href='index-2.html'>Practice Questions</a></li>
+			<li><a href='index.html'>Practice Questions</a></li>
 			<li><a href='ipv6.html'>IPv6 Subnetting</a></li>
 			<li><a href='subnets.html'>Basic Subnetting</a></li>
 			<li><a href='ipv6_subnetting.html'>IPv6 Calculator</a></li>
@@ -103,7 +103,7 @@ According to indeed.com, the average entry level CCNA salary is $56,000.
 opportunities. There are a number of alternative <a href='certs.html'>networking certificates</a> which you may consider along with the CCNA.<p></p>
 <p>The CCNA is clearly a certificate worth having. It is one of the best
  steps to take to gain a rewarding and high-paying job. One of the first
- things to do when preparing for the CCNA is to <a href="index-2.html">master subnetting</a> and the Cisco <a href='ccna_commands.html'>'show' command</a>.</p>
+ things to do when preparing for the CCNA is to <a href="index.html">master subnetting</a> and the Cisco <a href='ccna_commands.html'>'show' command</a>.</p>
 
 <div style="width: 100%;">
 <script async src="../pagead2.googlesyndication.com/pagead/js/f.txt"></script>
