--- a/networking/esercizi_subnetting/certs.html
+++ b/networking/esercizi_subnetting/certs.html
@@ -12,9 +12,9 @@
 	<link rel="canonical" href="certs.html" />
     </head>
     <body>
-<span id='titlename'><a href="index-2.html">SubnettingPractice.com</a></span> The most extensive subnetting practice site on the web!
+<span id='titlename'><a href="index.html">SubnettingPractice.com</a></span> The most extensive subnetting practice site on the web!
 		<ul id='nav'>
-			<li><a href='index-2.html'>Practice Questions</a></li>
+			<li><a href='index.html'>Practice Questions</a></li>
 			<li><a href='ipv6.html'>IPv6 Subnetting</a></li>
 			<li><a href='subnets.html'>Basic Subnetting</a></li>
 			<li><a href='ipv6_subnetting.html'>IPv6 Calculator</a></li>
@@ -68,7 +68,7 @@
 <p>Another reason to be wary of these certificates is the lack of study materials. Because there is less demand for these certifications, there is less study materials. A lack of specific study resources will make obtaining these certifications that much more work.</p>
 <h2>Microsoft, CompTIA and Other Non-Vendor Certs</h2>
 <p>These types of certificates may be worth looking into for a more general IT setting. If you are considering System administration, a Microsoft or Linux certificate can help you land interviews. Thee certainly is a large amount of overlap between system administration and network administration type jobs and it is helpful to know aspects of both. One certificate CompTIA offers is the Network+. It is a basic networking certificate, but is too basic to be useful for anything other than the lowest of help-desk jobs. Most people would be better of skipping it and moving on to a vendor certificate such as the CCNA. Microsoft offers Windows Server certifications, which do require networking knowledge, but the focus is on the server, not the network. Certainly you can never have too many certificates, but if you are looking to enter the networking world you are better off with a networking vendor certification.</p>
-<p>One of the most basic principals of networking is subnetting. The basis for any networking certificate is <a href='index-2.html'>reviewing your subnetting</a>. </p>
+<p>One of the most basic principals of networking is subnetting. The basis for any networking certificate is <a href='index.html'>reviewing your subnetting</a>. </p>
 
 <div style="width: 100%;">
 <script async src="../pagead2.googlesyndication.com/pagead/js/f.txt"></script>
