--- a/networking/esercizi_subnetting/jncia_ccna.html
+++ b/networking/esercizi_subnetting/jncia_ccna.html
@@ -12,9 +12,9 @@
 	<link rel="canonical" href="jncia_ccna.html" />
     </head>
     <body>
-<span id='titlename'><a href="index-2.html">SubnettingPractice.com</a></span> The most extensive subnetting site on the web!
+<span id='titlename'><a href="index.html">SubnettingPractice.com</a></span> The most extensive subnetting site on the web!
 		<ul id='nav'>
-			<li><a href='index-2.html'>Practice Questions</a></li>
+			<li><a href='index.html'>Practice Questions</a></li>
 			<li><a href='ipv6.html'>IPv6 Subnetting</a></li>
 			<li><a href='subnets.html'>Basic Subnetting</a></li>
 			<li><a href='ipv6_subnetting.html'>IPv6 Calculator</a></li>
@@ -40,7 +40,7 @@
 <h2>The CCNA</h2>
 <p>The CCNA is the standard networking certificate. With little or no experience you you still have a good chance at finding employment with a CCNA. Cisco is still king when it comes to networking equipment. They dominate the field and the CCNA is the certificate to obtain if you want to show basic router and switching knowledge. The CCNA is difficult enough to be respected in the industry and Cisco is so common that companies which do not even use Cisco brand equipment will look favorably on a CCNA certificate. Oh, and the <a href='ccna_salary.html'>pay</a> isn't bad. If you have no idea where to start or what you want to do, but know you want to be a part of the networking world, get your CCNA. </p>
 <h2>What about the JNCIA?</h2>
-<p>The JNCIA-JUNOS is meant to be the Juniper equivalent of the CCNA. However, anyone who has taken both will tell you that the JNCIA is easier than the CCNA. They cover some of the same subjects such as routing fundamentals and <a href='index-2.html'>subnetting</a>, but obviously a Juniper certificate is going to also focus on JunOS configuration and troubleshooting. So who should bother with the JNCIA? If you work with Juniper equipment it makes much more sense to get a Juniper certificate. You can always get a Cisco certificate if you end up leaving your current job. Likewise if you have your heart set on a specific job and they use Juniper equipment, then the JNCIA will look impressive on your resume.</p>
+<p>The JNCIA-JUNOS is meant to be the Juniper equivalent of the CCNA. However, anyone who has taken both will tell you that the JNCIA is easier than the CCNA. They cover some of the same subjects such as routing fundamentals and <a href='index.html'>subnetting</a>, but obviously a Juniper certificate is going to also focus on JunOS configuration and troubleshooting. So who should bother with the JNCIA? If you work with Juniper equipment it makes much more sense to get a Juniper certificate. You can always get a Cisco certificate if you end up leaving your current job. Likewise if you have your heart set on a specific job and they use Juniper equipment, then the JNCIA will look impressive on your resume.</p>
 
 <h2>More Valuable: the JNCIA or the CCNA?</h2>
 <p>Let's be honest, all things being equal, you want to make more money. Is getting a general certificate like the CCNA better than the Juniper specific JNCIA? It depends. Do you have any experience? If you are looking for entry-level work, then go for the CCNA. The simple fact is that Cisco dominates the industry and the IOS commands you learn while studying for your CCNA are going to be in higher demand. Using data from indeed.com, there are currently 367 job listings which specifically mention the JNCIA. Compare that to 9277 jobs which specifically list the CCNA in their postings. There are more than <strong>25 times as many CCNA jobs as JNCIA</strong> jobs being listed! If you are entry-level, you need a certificate which will open as many doors as possible.</p>
