--- a/networking/esercizi_subnetting/subnets.html
+++ b/networking/esercizi_subnetting/subnets.html
@@ -25,9 +25,9 @@ input {
 	<link rel='stylesheet' type='text/css' href='header_footer.css'>
     </head>
     <body>
-<span id=titlename><a href="index-2.html">SubnettingPractice.com</a></span> The most extensive subnetting practice site on the web!
+<span id=titlename><a href="index.html">SubnettingPractice.com</a></span> The most extensive subnetting practice site on the web!
                 <ul id='nav'>
-                        <li><a href='index-2.html'>Practice Questions</a></li>
+                        <li><a href='index.html'>Practice Questions</a></li>
                         <li><a href='ipv6.html'>IPv6 Subnetting</a></li>
                         <li><a href='subnets.html'>Basic Subnetting</a></li>
                         <li><a href='ipv6_subnetting.html'>IPv6 Calculator</a></li>
@@ -70,7 +70,7 @@ input {
 </div>
 <p><button onclick ="show_answer();">Show Answers</button>  <button onclick ="next_question();">Next</button></p>
 <p>These are basic subnetting questions. You should be able to do these without any problems if you plan to work in networking or are studying for a certificate such as the CCNA.</p>
-<p>Once you have these down, try the more advanced <a href="index-2.html">questions</a>. If you need help, take a look at <a href="howto.html">our how to</a> and our <a href="cheatsheet.html">subnetting reference cheatsheet</a>.</p>
+<p>Once you have these down, try the more advanced <a href="index.html">questions</a>. If you need help, take a look at <a href="howto.html">our how to</a> and our <a href="cheatsheet.html">subnetting reference cheatsheet</a>.</p>
 
 <div style="width: 100%;">
 <script async src="../pagead2.googlesyndication.com/pagead/js/f.txt"></script>
