--- a/networking/esercizi_subnetting/osi_layer.html
+++ b/networking/esercizi_subnetting/osi_layer.html
@@ -11,9 +11,9 @@
 	<link rel="canonical" href="osi_layer.html" />
     </head>
     <body>
-<span id=titlename><a href="index-2.html">SubnettingPractice.com</a></span> The most extensive subnetting practice site on the web!
+<span id=titlename><a href="index.html">SubnettingPractice.com</a></span> The most extensive subnetting practice site on the web!
 		<ul id='nav'>
-			<li><a href='index-2.html'>Practice Questions</a></li>
+			<li><a href='index.html'>Practice Questions</a></li>
 			<li><a href='ipv6.html'>IPv6 Subnetting</a></li>
 			<li><a href='subnets.html'>Basic Subnetting</a></li>
 			<li><a href='ipv6_subnetting.html'>IPv6 Calculator</a></li>
