--- a/networking/esercizi_subnetting/binary_calc.html
+++ b/networking/esercizi_subnetting/binary_calc.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    
+
 <!-- Mirrored from subnettingpractice.com/binary_calc.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 30 Sep 2019 15:26:35 GMT -->
 <head>
         <meta charset="utf-8">
@@ -72,50 +72,12 @@ input {
      data-ad-client="ca-pub-5214460626967121"
      data-ad-slot="1710849691"
      data-ad-format="link"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+
 </div>
 
-<ul id='foot'>
-                        <li><a href='howto.html'>How to Subnet</a></li>
-                        <li><a href='howtoipv6.html'>How to Subnet IPv6</a></li>
-                        <li><a href='cheatsheet.html'>Subnetting Cheatsheet</a></li>
-                        <li><a href='binary_calc.html'>Binary/Hex Calculator</a></li>
-                        <li><a href='ethernet_wiring.html'>Ethernet Wiring Practice</a></li>
-                        <li><a href='ipv6_is_huge.html'>Incredible Size of IPv6</a></li>
-                        <li><a href='twos.html'>Exponent Practice</a></li>
-                        <li><a href='sixteens.html'>Multiples of Sixteen </a></li>
-                        <li><a href='osi_layer.html'>OSI Layer Practice</a></li>
-                        <li><a href='headers.html'>IP Header Practice</a></li>
-                        <li><a href='ip_allocation.html'>IPv4 v IPv6 Allocation</a></li>
-                        <li><a href='ccna_commands.html'>Top CCNA Commands</a></li>
-                        <li><a href='certs.html'>Networking Certificates</a></li>
-                        <li><a href='ccna_salary.html'>CCNA Salary Report</a></li>
-                        <li><a href='ccna_resources.html'>CCNA Resource List</a></li>
-                        <li><a href='jncia_ccna.html'>JNCIA v CCNA</a></li>
-                        <li><a href='contact.html'>Privacy Policy</a></li>
-<li><a href="https://www.facebook.com/sharer.php?u=http://subnettingpractice.com/binary_calc.html" target="_blank" class="share"><img src="images/facebook.png" alt="Facebook" /></a>
-<a href="https://www.linkedin.com/shareArticle?mini=true&amp;url=http://subnettingpractice.com/binary_calc.html" target="_blank" class="share"><img src="images/linkedin.png" alt="LinkedIn" /></a>
-<a href="https://twitter.com/share?url=http://subnettingpractice.com/binary_calc.html&amp;text=A%20Binary%20Decimal%20Hexadecimal%20Calculator!" target="_blank" class="share"><img src="images/twitter.png" alt="Twitter" /></a>
-</li>
-                </ul>
 
-<small>Copyright 2014 SubnettingPractice.com. All rights reserved</small>
+<small>Copyright 2019. All rights reserved</small>
     </body>
         <script type="text/javascript" src="binary_calc.js"></script>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','../www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-50427363-2', 'subnettingpractice.com');
-  ga('require', 'displayfeatures');
-  ga('send', 'pageview');
-
-</script>
-
-<!-- Mirrored from subnettingpractice.com/binary_calc.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 30 Sep 2019 15:26:35 GMT -->
 </html>
-
