--- a/networking/esercizi_subnetting/twos.html
+++ b/networking/esercizi_subnetting/twos.html
@@ -1,31 +1,68 @@
 <!DOCTYPE html>
 <html>
-    
-<!-- Mirrored from subnettingpractice.com/twos.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 30 Sep 2019 15:26:36 GMT -->
+
+<!-- Mirrored from subnettingpractice.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 30 Sep 2019 15:26:19 GMT -->
 <head>
-        <meta charset="utf-8">
-        <title>Exponent Practice</title>
-	<meta name="description" content="Free exponent practice questions. Select any base and any range of exponents. Binary, Hex, etc. Great practice for school exams" />
-	<meta name="keywords" content="twos, powers, practice, powers of two, base two" />
+        <title>Subnetting</title>
+
 	<meta name=viewport content="width=device-width, initial-scale=1">
- <link rel="canonical" href="twos.html" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel='stylesheet' type='text/css' href='header_footer.css'>
+  <link rel="stylesheet" type="text/css" href="../../css/stile_networking.css">
+	<link rel="canonical" href="index.html" />
     </head>
     <body>
-<span id=titlename><a href="index.html">SubnettingPractice.com</a></span> The most extensive subnetting practice site on the web!
-                <ul id='nav'>
-                        <li><a href='index.html'>Practice Questions</a></li>
-                        <li><a href='ipv6.html'>IPv6 Subnetting</a></li>
-                        <li><a href='subnets.html'>Basic Subnetting</a></li>
-                        <li><a href='ipv6_subnetting.html'>IPv6 Calculator</a></li>
-                        <li><a href='binary.html'>Binary Practice</a></li>
-                        <li><a href='calc.html'>Subnetting Calculator</a></li>
-                        <li><a href='vlsm.html'>VLSM Calculator</a></li>
-                </ul>
+
+      <div class="topnav" id="myTopnav">
+        <!--Questo è il menu responsive-->
+    			<a href='index.html' class="active">Subnetting</a>
+    			<a href='binary.html'>Binary Practice</a>
+          <a href='calculator.html'>Calculator</a>  <!--VLSM e bin/exa calculator -->
+          <a href='ethernet_wiring.html'>Ethernet Wiring Practice</a>
+          <a href='twos.html'>Exponent Practice</a>
+            <!--<a href='sixteens.html'>Multiples of Sixteen </a>-->
+          <a href='osi_layer.html'>OSI Layer Practice</a>
+          <a href='headers.html'>IP Header Practice</a>
+          <a href='teoria.html'>Teoria</a>
+              <!--<a href='howto.html'>How to Subnet</a>
+              <a href='howtoipv6.html'>How to Subnet IPv6</a>
+              <a href='cheatsheet.html'>Subnetting Cheatsheet</a>
+              <a href='ccna_commands.html'>Top CCNA Commands</a>
+              <a href='ip_allocation.html'>IPv4 v IPv6 Allocation</a>
+              <a href='ipv6_is_huge.html'>Incredible Size of IPv6</a>
+        -->
+
+
+        <a href="javascript:void(0);" class="icon" onclick="responsiveMenu()">
+          <i class="fa fa-bars"></i>
+        </a>
+      </div>
+
+
+
+
 <h1>Exponent Practice</h1>
 <form onsubmit="return false;">
-	<p>Select your base: <input type='text' id='base' value='2' size="3" maxlength="2">
-	<br>Select what range of exponents you would like to practice - 
+	<p>Select your base: <input type='text' id='base_due' value='2' size="3" maxlength="2">
+	<br>Select what range of exponents you would like to practice -
+	From: <input type='text' id='from_due' value='2' size="3" maxlength="2">
+	To: <input type='text' id='to_due' value='16' size="3" maxlength="2"><br>
+	<p id='question_due'></p>
+	<input type='text' id='input_due' placeholder='Answer here'>
+	<button onClick="check_answer_due();">Submit</button>
+</form>
+<p><button onclick ="show_answer_due();">Show Answer</button>  <button onclick ="next_question_due();">Next</button></p>
+<p id='answeris_due' style='display:none'>The correct answer is:</p>
+<p id='answer_due' style='display:none'></p>
+<p><a href="binary.html">Binary</a> is a base 2 number system which computers use for their calculations, including routing. Computers 'think' in binary. Memorizing or being able to quickly calculate the powers of 2 is immensely helpful in being able to subnet quickly. This will save precious time on exams such as the CCNA and also prove valuable in the real world. The formula for how many valid hosts there are is always going to be 2<sup>h</sup>-2. </p>
+
+
+
+
+
+<h1>Multiples of Sixteen Practice</h1>
+<form onsubmit="return false;">
+	<p>Select what range of multiples you would like to practice -
 	From: <input type='text' id='from' value='2' size="3" maxlength="2">
 	To: <input type='text' id='to' value='16' size="3" maxlength="2"><br>
 	<p id='question'></p>
@@ -35,61 +72,15 @@
 <p><button onclick ="show_answer();">Show Answer</button>  <button onclick ="next_question();">Next</button></p>
 <p id='answeris' style='display:none'>The correct answer is:</p>
 <p id='answer' style='display:none'></p>
-<p><a href="binary.html">Binary</a> is a base 2 number system which computers use for their calculations, including routing. Computers 'think' in binary. Memorizing or being able to quickly calculate the powers of 2 is immensely helpful in being able to subnet quickly. This will save precious time on exams such as the CCNA and also prove valuable in the real world. The formula for how many valid hosts there are is always going to be 2<sup>h</sup>-2. </p>
-
-<div style="width: 100%;">
-<script async src="../pagead2.googlesyndication.com/pagead/js/f.txt"></script>
-<!-- subnetting-header-responsive -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-5214460626967121"
-     data-ad-slot="4650969699"
-     data-ad-format="auto"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
+<p>Knowing the multiples of sixteen is helpful in calculating block sizes and where the next network address begins. 16 is nice because it is so close to all the other sizes that blocks come in, 32, 8, etc.</p>
+<p>
 
 
-<ul id='foot'>
-                        <li><a href='howto.html'>How to Subnet</a></li>
-                        <li><a href='howtoipv6.html'>How to Subnet IPv6</a></li>
-                        <li><a href='cheatsheet.html'>Subnetting Cheatsheet</a></li>
-                        <li><a href='binary_calc.html'>Binary/Hex Calculator</a></li>
-                        <li><a href='ethernet_wiring.html'>Ethernet Wiring Practice</a></li>
-                        <li><a href='ipv6_is_huge.html'>Incredible Size of IPv6</a></li>
-                        <li><a href='twos.html'>Exponent Practice</a></li>
-                        <li><a href='sixteens.html'>Multiples of Sixteen </a></li>
-                        <li><a href='osi_layer.html'>OSI Layer Practice</a></li>
-                        <li><a href='headers.html'>IP Header Practice</a></li>
-                        <li><a href='ip_allocation.html'>IPv4 v IPv6 Allocation</a></li>
-                        <li><a href='ccna_commands.html'>Top CCNA Commands</a></li>
-                        <li><a href='certs.html'>Networking Certificates</a></li>
-                        <li><a href='ccna_salary.html'>CCNA Salary Report</a></li>
-                       <li><a href='ccna_resources.html'>CCNA Resource List</a></li>
-                        <li><a href='jncia_ccna.html'>JNCIA v CCNA</a></li>
-                        <li><a href='contact.html'>Privacy Policy</a></li>
-			<li><a href="https://www.facebook.com/sharer.php?u=http://subnettingpractice.com" target="_blank" class="share"><img src="images/facebook.png" alt="Facebook" /></a>
-<a href="https://www.linkedin.com/shareArticle?mini=true&amp;url=http://subnettingpractice.com" target="_blank" class="share"><img src="images/linkedin.png" alt="LinkedIn" /></a>
-<a href="https://twitter.com/share?url=http://subnettingpractice.com&amp;text=Learning%20to%20subnet!" target="_blank" class="share"><img src="images/twitter.png" alt="Twitter" /></a>
-</li>
-                </ul>
 
-<small>Copyright 2014 SubnettingPractice.com. All rights reserved</small>
+
+<small>Copyright 2019. All rights reserved</small>
         <script type="text/javascript" src="twos.js"></script>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','../www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-50427363-2', 'subnettingpractice.com');
-  ga('require', 'displayfeatures');
-  ga('send', 'pageview');
-
-</script>
+        <script type="text/javascript" src="sixteens.js"></script>
     </body>
 
-<!-- Mirrored from subnettingpractice.com/twos.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 30 Sep 2019 15:26:36 GMT -->
 </html>
-
