Cambiato menu da tutte le pagine principali

--- a/networking/esercizi_subnetting/calculator.html
+++ b/networking/esercizi_subnetting/calculator.html
@@ -112,6 +112,18 @@ reason as before, we can only have 192.168.1.0/30, with the next possible networ
 <small>Copyright 2014 SubnettingPractice.com. All rights reserved</small>
         <script type="text/javascript" src="vlsm.js"></script>
         <script type="text/javascript" src="binary_calc.js"></script>
+
+        <script>
+          function responsiveMenu() {
+            var x = document.getElementById("myTopnav");
+            if (x.className === "topnav") {
+              x.className += " responsive";
+            } else {
+              x.className = "topnav";
+            }
+          }
+        </script>
+
     </body>
 
 </html>
