--- a/networking/esercizi_subnetting/twos.html
+++ b/networking/esercizi_subnetting/twos.html
@@ -81,6 +81,19 @@
 <small>Copyright 2019. All rights reserved</small>
         <script type="text/javascript" src="twos.js"></script>
         <script type="text/javascript" src="sixteens.js"></script>
+
+        <script>
+          function responsiveMenu() {
+            var x = document.getElementById("myTopnav");
+            if (x.className === "topnav") {
+              x.className += " responsive";
+            } else {
+              x.className = "topnav";
+            }
+          }
+        </script>
+
+
     </body>
 
 </html>
