--- a/networking/esercizi_subnetting/binary.html
+++ b/networking/esercizi_subnetting/binary.html
@@ -1,27 +1,46 @@
 <!DOCTYPE html>
 <html>
 
-<!-- Mirrored from subnettingpractice.com/binary.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 30 Sep 2019 15:26:31 GMT -->
+<!-- Mirrored from subnettingpractice.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 30 Sep 2019 15:26:19 GMT -->
 <head>
-        <meta charset="utf-8">
-        <title>Binary Practice Questions</title>
-<meta name="description" content="Free practice questions for mastering binary and decimal conversions. Learn how computers really think." />
-	<meta name="keywords" content="binary, decimal, base, hexadecimal, hex, convert, practice, questions" />
+        <title>Subnetting</title>
+
 	<meta name=viewport content="width=device-width, initial-scale=1">
-	<link rel="canonical" href="binary.html" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel='stylesheet' type='text/css' href='header_footer.css'>
+  <link rel="stylesheet" type="text/css" href="../../css/stile_networking.css">
+	<link rel="canonical" href="index.html" />
     </head>
     <body>
-<span id=titlename><a href="index.html">SubnettingPractice.com</a></span> The most extensive subnetting practice site on the web!
-                <ul id='nav'>
-                        <li><a href='index.html'>Practice Questions</a></li>
-                        <li><a href='ipv6.html'>IPv6 Subnetting</a></li>
-                        <li><a href='subnets.html'>Basic Subnetting</a></li>
-                        <li><a href='ipv6_subnetting.html'>IPv6 Calculator</a></li>
-                        <li><a href='binary.html'>Binary Practice</a></li>
-                        <li><a href='calc.html'>Subnetting Calculator</a></li>
-                        <li><a href='vlsm.html'>VLSM Calculator</a></li>
-                </ul>
+
+      <div class="topnav" id="myTopnav">
+        <!--Questo è il menu responsive-->
+    			<a href='index.html' class="active">Subnetting</a>
+    			<a href='binary.html'>Binary Practice</a>
+          <a href='calculator.html'>Calculator</a>  <!--VLSM e bin/exa calculator -->
+          <a href='ethernet_wiring.html'>Ethernet Wiring Practice</a>
+          <a href='twos.html'>Exponent Practice</a>
+            <!--<a href='sixteens.html'>Multiples of Sixteen </a>-->
+          <a href='osi_layer.html'>OSI Layer Practice</a>
+          <a href='headers.html'>IP Header Practice</a>
+          <a href='teoria.html'>Teoria</a>
+              <!--<a href='howto.html'>How to Subnet</a>
+              <a href='howtoipv6.html'>How to Subnet IPv6</a>
+              <a href='cheatsheet.html'>Subnetting Cheatsheet</a>
+              <a href='ccna_commands.html'>Top CCNA Commands</a>
+              <a href='ip_allocation.html'>IPv4 v IPv6 Allocation</a>
+              <a href='ipv6_is_huge.html'>Incredible Size of IPv6</a>
+        -->
+
+
+        <a href="javascript:void(0);" class="icon" onclick="responsiveMenu()">
+          <i class="fa fa-bars"></i>
+        </a>
+      </div>
+
+
+
+
 
 <h1>Learn Binary</h1>
 	<p id='question'></p>
@@ -35,18 +54,7 @@
 <p id='solution' style='display:none'></p>
 <p>Binary is the key to subnetting. All computers process data in binary. A circuit is either on or off. Learning to count in binary, and also to translate binary into decimal will help not only with subnetting but with understanding computers in general.</p>
 
-<div style="width: 100%;">
-<script async src="../pagead2.googlesyndication.com/pagead/js/f.txt"></script>
-<!-- subnetting-header-responsive -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-5214460626967121"
-     data-ad-slot="4650969699"
-     data-ad-format="auto"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
+
 
 <p>Binary uses only two digits, a 0 and a 1. Decimal uses ten digits, 0-9. Because decimal has ten different digits, you can use a single digit to count to three in decimal. 0,1,2,3. Binary cannot do this in a single space. Here is counting to three in decimal:
 <br>0
@@ -63,53 +71,22 @@
 <p>Because IPv6 is displayed using hexadecimal digits, converting between hex and binary is what network engineers will need to know for the future. The computer will still be using binary, but things will be displayed in hex.</p>
 <p>A <a href="binary_calc.html">Binary Decimal Hexadecimal Calculator</a> can also come in handy.<p>
 
-<div style="width: 100%;">
-<script async src="../pagead2.googlesyndication.com/pagead/js/f.txt"></script>
-<!-- Responsive link -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-5214460626967121"
-     data-ad-slot="1710849691"
-     data-ad-format="link"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
 
-<ul id='foot'>
-                        <li><a href='howto.html'>How to Subnet</a></li>
-                        <li><a href='howtoipv6.html'>How to Subnet IPv6</a></li>
-                        <li><a href='cheatsheet.html'>Subnetting Cheatsheet</a></li>
-                        <li><a href='binary_calc.html'>Binary/Hex Calculator</a></li>
-                        <li><a href='ethernet_wiring.html'>Ethernet Wiring Practice</a></li>
-                        <li><a href='ipv6_is_huge.html'>Incredible Size of IPv6</a></li>
-                        <li><a href='twos.html'>Exponent Practice</a></li>
-                        <li><a href='sixteens.html'>Multiples of Sixteen </a></li>
-                        <li><a href='osi_layer.html'>OSI Layer Practice</a></li>
-                        <li><a href='headers.html'>IP Header Practice</a></li>
-                        <li><a href='ip_allocation.html'>IPv4 v IPv6 Allocation</a></li>
-                        <li><a href='ccna_commands.html'>Top CCNA Commands</a></li>
 
-			<li><a href="https://www.facebook.com/sharer.php?u=http://subnettingpractice.com" target="_blank" class="share"><img src="images/facebook.png" alt="Facebook" /></a>
-<a href="https://www.linkedin.com/shareArticle?mini=true&amp;url=http://subnettingpractice.com" target="_blank" class="share"><img src="images/linkedin.png" alt="LinkedIn" /></a>
-<a href="https://twitter.com/share?url=http://subnettingpractice.com&amp;text=Learning%20to%20subnet!" target="_blank" class="share"><img src="images/twitter.png" alt="Twitter" /></a>
-</li>
-                </ul>
 
-<small>Copyright 2014 SubnettingPractice.com. All rights reserved</small>
+<small>Copyright 2019. All rights reserved</small>
         <script type="text/javascript" src="binary.js"></script>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','../www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-50427363-2', 'subnettingpractice.com');
-  ga('require', 'displayfeatures');
-  ga('send', 'pageview');
-
-</script>
+        <script>
+          function responsiveMenu() {
+            var x = document.getElementById("myTopnav");
+            if (x.className === "topnav") {
+              x.className += " responsive";
+            } else {
+              x.className = "topnav";
+            }
+          }
+        </script>
     </body>
 
-<!-- Mirrored from subnettingpractice.com/binary.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 30 Sep 2019 15:26:32 GMT -->
 </html>
