--- a/networking/esercizi_subnetting/ethernet_wiring.html
+++ b/networking/esercizi_subnetting/ethernet_wiring.html
@@ -1,37 +1,44 @@
 <!DOCTYPE html>
 <html>
-    
-<!-- Mirrored from subnettingpractice.com/ethernet_wiring.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 30 Sep 2019 15:26:35 GMT -->
+
+<!-- Mirrored from subnettingpractice.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 30 Sep 2019 15:26:19 GMT -->
 <head>
-        <meta charset="utf-8">
-        <title>Ethernet Wiring Practice</title>
-<meta name="description" content="Review the order of Ethernet wiring colors. Practice both T-568A and T-568B, both striaght through and crossover." />
-	<meta name="keywords" content="questions, wire, Ethernet, colors, 568, order, network+" />
+        <title>Subnetting</title>
+
 	<meta name=viewport content="width=device-width, initial-scale=1">
-	<link rel="canonical" href="ethernet_wiring.html" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel='stylesheet' type='text/css' href='header_footer.css'>
+  <link rel="stylesheet" type="text/css" href="../../css/stile_networking.css">
+	<link rel="canonical" href="index.html" />
     </head>
     <body>
-<span id=titlename><a href="index.html">SubnettingPractice.com</a></span> The most extensive subnetting practice site on the web!
-                <ul id='nav'>
-                        <li><a href='index.html'>Practice Questions</a></li>
-                        <li><a href='ipv6.html'>IPv6 Subnetting</a></li>
-                        <li><a href='subnets.html'>Basic Subnetting</a></li>
-                        <li><a href='ipv6_subnetting.html'>IPv6 Calculator</a></li>
-                        <li><a href='binary.html'>Binary Practice</a></li>
-                        <li><a href='calc.html'>Subnetting Calculator</a></li>
-                        <li><a href='vlsm.html'>VLSM Calculator</a></li>
-                </ul>
-<p>
-<script async src="../pagead2.googlesyndication.com/pagead/js/f.txt"></script>
-<!-- horizontal black -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:90px"
-     data-ad-client="ca-pub-5214460626967121"
-     data-ad-slot="7119657690"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+
+      <div class="topnav" id="myTopnav">
+        <!--Questo è il menu responsive-->
+    			<a href='index.html' class="active">Subnetting</a>
+    			<a href='binary.html'>Binary Practice</a>
+          <a href='calculator.html'>Calculator</a>  <!--VLSM e bin/exa calculator -->
+          <a href='ethernet_wiring.html'>Ethernet Wiring Practice</a>
+          <a href='twos.html'>Exponent Practice</a>
+            <!--<a href='sixteens.html'>Multiples of Sixteen </a>-->
+          <a href='osi_layer.html'>OSI Layer Practice</a>
+          <a href='headers.html'>IP Header Practice</a>
+          <a href='teoria.html'>Teoria</a>
+              <!--<a href='howto.html'>How to Subnet</a>
+              <a href='howtoipv6.html'>How to Subnet IPv6</a>
+              <a href='cheatsheet.html'>Subnetting Cheatsheet</a>
+              <a href='ccna_commands.html'>Top CCNA Commands</a>
+              <a href='ip_allocation.html'>IPv4 v IPv6 Allocation</a>
+              <a href='ipv6_is_huge.html'>Incredible Size of IPv6</a>
+        -->
+
+
+        <a href="javascript:void(0);" class="icon" onclick="responsiveMenu()">
+          <i class="fa fa-bars"></i>
+        </a>
+      </div>
+
+
 </p>
 <h1>Ethernet Wire Order</h1>
 <p>Drag and drop the colored wires to create either a T-568A or T-568B wire ending. T-568B is the most common type of wiring, but for crossover cables one end will have to be T-568A. <br>
@@ -44,58 +51,22 @@ For a crossover cable, pins 1 and 2 are switched with 3 and 6.
 <div id='choices'></div>
 <button onclick='checkAnswer();'>Submit</button>
 <div id='answer'></div>
-<p>
-<script async src="../pagead2.googlesyndication.com/pagead/js/f.txt"></script>
-<!-- link large minimal -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-5214460626967121"
-     data-ad-slot="8042184099"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</p>
 
 
-<ul id='foot'>
-                        <li><a href='howto.html'>How to Subnet</a></li>
-                        <li><a href='howtoipv6.html'>How to Subnet IPv6</a></li>
-                        <li><a href='cheatsheet.html'>Subnetting Cheatsheet</a></li>
-                        <li><a href='binary_calc.html'>Binary/Hex Calculator</a></li>
-                        <li><a href='ethernet_wiring.html'>Ethernet Wiring Practice</a></li>
-                        <li><a href='ipv6_is_huge.html'>Incredible Size of IPv6</a></li>
-                        <li><a href='twos.html'>Exponent Practice</a></li>
-                        <li><a href='sixteens.html'>Multiples of Sixteen </a></li>
-                        <li><a href='osi_layer.html'>OSI Layer Practice</a></li>
-                        <li><a href='headers.html'>IP Header Practice</a></li>
-                        <li><a href='ip_allocation.html'>IPv4 v IPv6 Allocation</a></li>
-                        <li><a href='ccna_commands.html'>Top CCNA Commands</a></li>
-                        <li><a href='certs.html'>Networking Certificates</a></li>
-                        <li><a href='ccna_salary.html'>CCNA Salary Report</a></li>
-                        <li><a href='ccna_resources.html'>CCNA Resource List</a></li>
-                        <li><a href='jncia_ccna.html'>JNCIA v CCNA</a></li>
-                        <li><a href='contact.html'>Privacy Policy</a></li>
-<li><a href="https://www.facebook.com/sharer.php?u=http://subnettingpractice.com" target="_blank" class="share"><img src="images/facebook.png" alt="Facebook" /></a>
-<a href="https://www.linkedin.com/shareArticle?mini=true&amp;url=http://subnettingpractice.com" target="_blank" class="share"><img src="images/linkedin.png" alt="LinkedIn" /></a>
-<a href="https://twitter.com/share?url=http://subnettingpractice.com&amp;text=Learning%20to%20subnet!" target="_blank" class="share"><img src="images/twitter.png" alt="Twitter" /></a>
-</li>
-                </ul>
-
-<small>Copyright 2014 SubnettingPractice.com. All rights reserved</small>
+<small>Copyright 2019. All rights reserved</small>
         <script type="text/javascript" src="ethernet_wiring.min.js"></script>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','../www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-50427363-2', 'subnettingpractice.com');
-  ga('require', 'displayfeatures');
-  ga('send', 'pageview');
+        <script>
+          function responsiveMenu() {
+            var x = document.getElementById("myTopnav");
+            if (x.className === "topnav") {
+              x.className += " responsive";
+            } else {
+              x.className = "topnav";
+            }
+          }
+        </script>
 
-</script>
     </body>
 
-<!-- Mirrored from subnettingpractice.com/ethernet_wiring.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 30 Sep 2019 15:26:35 GMT -->
 </html>
-
