--- a/networking/esercizi_subnetting/headers.html
+++ b/networking/esercizi_subnetting/headers.html
@@ -1,37 +1,46 @@
 <!DOCTYPE html>
 <html>
-    
-<!-- Mirrored from subnettingpractice.com/headers.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 30 Sep 2019 15:26:37 GMT -->
+
+<!-- Mirrored from subnettingpractice.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 30 Sep 2019 15:26:19 GMT -->
 <head>
-        <title>IP Header Practice Test</title>
-	<meta name="description" content="Master IPv4 and IPv6 header order through this interactive test. Place the IP header information in the correct order. Interaction is the best way to study."/>
-	<meta name="keywords" content="subnetting,IP headers,IPv6 header,CCNA,exam,network+,ICND1,subnet,networking" />
+        <title>Subnetting</title>
+
 	<meta name=viewport content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel='stylesheet' type='text/css' href='header_footer.css'>
+  <link rel="stylesheet" type="text/css" href="../../css/stile_networking.css">
 	<link rel="canonical" href="index.html" />
     </head>
     <body>
-<span id=titlename><a href="index.html">SubnettingPractice.com</a></span> The most extensive subnetting practice site on the web!
-		<ul id='nav'>
-			<li><a href='index.html'>Practice Questions</a></li>
-			<li><a href='ipv6.html'>IPv6 Subnetting</a></li>
-			<li><a href='subnets.html'>Basic Subnetting</a></li>
-			<li><a href='ipv6_subnetting.html'>IPv6 Calculator</a></li>
-			<li><a href='binary.html'>Binary Practice</a></li>
-			<li><a href='calc.html'>Subnetting Calculator</a></li>
-			<li><a href='vlsm.html'>VLSM Calculator</a></li>
-		</ul>
-<p>
-<script async src="../pagead2.googlesyndication.com/pagead/js/f.txt"></script>
-<!-- horizontal black -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:90px"
-     data-ad-client="ca-pub-5214460626967121"
-     data-ad-slot="7119657690"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</p>
+
+      <div class="topnav" id="myTopnav">
+        <!--Questo è il menu responsive-->
+    			<a href='index.html' class="active">Subnetting</a>
+    			<a href='binary.html'>Binary Practice</a>
+          <a href='calculator.html'>Calculator</a>  <!--VLSM e bin/exa calculator -->
+          <a href='ethernet_wiring.html'>Ethernet Wiring Practice</a>
+          <a href='twos.html'>Exponent Practice</a>
+            <!--<a href='sixteens.html'>Multiples of Sixteen </a>-->
+          <a href='osi_layer.html'>OSI Layer Practice</a>
+          <a href='headers.html'>IP Header Practice</a>
+          <a href='teoria.html'>Teoria</a>
+              <!--<a href='howto.html'>How to Subnet</a>
+              <a href='howtoipv6.html'>How to Subnet IPv6</a>
+              <a href='cheatsheet.html'>Subnetting Cheatsheet</a>
+              <a href='ccna_commands.html'>Top CCNA Commands</a>
+              <a href='ip_allocation.html'>IPv4 v IPv6 Allocation</a>
+              <a href='ipv6_is_huge.html'>Incredible Size of IPv6</a>
+        -->
+
+
+        <a href="javascript:void(0);" class="icon" onclick="responsiveMenu()">
+          <i class="fa fa-bars"></i>
+        </a>
+      </div>
+
+
+
+
 		<h1>IP Header Format</h1>
 		<p>IP data packets are preceded with header information which is used for routing and error control. Place the following IPv4 and IPv6 header sections in their correct order. Click once on the text you would like to move, then click on an empty box you would like to move it to. You can only move text into empty boxes. Though some header information for IPv4 and IPv6 is the same, such as the protocol field or source address, you cannot place IPv4 items in IPv6 fields, and vice versa.</p>
 		<h2>IPv4</h2>
@@ -73,46 +82,19 @@
 <p>For the correct order see: <a href='IPv4_to_IPv6_header.png'>IPv4 and IPv6 headers</a>
 <br>For more information see: <a href='ip_header.html'>IP header information</a></p>
 
-<ul id='foot'>
-                        <li><a href='howto.html'>How to Subnet</a></li>
-                        <li><a href='howtoipv6.html'>How to Subnet IPv6</a></li>
-                        <li><a href='cheatsheet.html'>Subnetting Cheatsheet</a></li>
-                        <li><a href='binary_calc.html'>Binary/Hex Calculator</a></li>
-                        <li><a href='ethernet_wiring.html'>Ethernet Wiring Practice</a></li>
-                        <li><a href='ipv6_is_huge.html'>Incredible Size of IPv6</a></li>
-                        <li><a href='twos.html'>Exponent Practice</a></li>
-                        <li><a href='sixteens.html'>Multiples of Sixteen </a></li>
-                        <li><a href='osi_layer.html'>OSI Layer Practice</a></li>
-                        <li><a href='headers.html'>IP Header Practice</a></li>
-                        <li><a href='ip_allocation.html'>IPv4 v IPv6 Allocation</a></li>
-                        <li><a href='ccna_commands.html'>Top CCNA Commands</a></li>
-                        <li><a href='certs.html'>Networking Certificates</a></li>
-                        <li><a href='ccna_salary.html'>CCNA Salary Report</a></li>
-                        <li><a href='ccna_resources.html'>CCNA Resource List</a></li>
-                        <li><a href='jncia_ccna.html'>JNCIA v CCNA</a></li>
-                        <li><a href='contact.html'>Privacy Policy</a></li>
-<li><a href="https://www.facebook.com/sharer.php?u=http://subnettingpractice.com/headers.html" target="_blank" class="share"><img src="images/facebook.png" alt="Facebook" /></a>
-<a href="https://www.linkedin.com/shareArticle?mini=true&amp;url=http://subnettingpractice.com/headers.html" target="_blank" class="share"><img src="images/linkedin.png" alt="LinkedIn" /></a>
-<a href="https://twitter.com/share?url=http://subnettingpractice.com/headers.html&amp;text=Learning%20to%20subnet!" target="_blank" class="share"><img src="images/twitter.png" alt="Twitter" /></a>
-</li>
-                </ul>
 
-<small>Copyright 2014 SubnettingPractice.com. All rights reserved. <a href='contact.html'>Contact</a></small>
+<small>Copyright 2019. All rights reserved. <a href='contact.html'>Contact</a></small>
 <script type="text/javascript" src="headers.js"></script>
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','../www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-50427363-2', 'subnettingpractice.com');
-  ga('require', 'displayfeatures');
-  ga('send', 'pageview');
-
+  function responsiveMenu() {
+    var x = document.getElementById("myTopnav");
+    if (x.className === "topnav") {
+      x.className += " responsive";
+    } else {
+      x.className = "topnav";
+    }
+  }
 </script>
     </body>
 
-<!-- Mirrored from subnettingpractice.com/headers.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 30 Sep 2019 15:26:38 GMT -->
 </html>
-
-
