--- a/networking/esercizi_subnetting/osi_layer.html
+++ b/networking/esercizi_subnetting/osi_layer.html
@@ -1,40 +1,46 @@
 <!DOCTYPE html>
 <html>
-    
-<!-- Mirrored from subnettingpractice.com/osi_layer.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 30 Sep 2019 15:26:36 GMT -->
+
+<!-- Mirrored from subnettingpractice.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 30 Sep 2019 15:26:19 GMT -->
 <head>
-        <title>OSI and TCP/IP Layer Memorization</title>
-	<meta name="description" content="Master the OSI layer model and the TCP layer model. Learn by interactively ordering the layers into their correct orders."/>
-	<meta name="keywords" content="OSI, Layer, TCP, transport, network, data link, comptia, ccna, session" />
+        <title>Subnetting</title>
+
 	<meta name=viewport content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel='stylesheet' type='text/css' href='header_footer.css'>
-	<link rel="canonical" href="osi_layer.html" />
+  <link rel="stylesheet" type="text/css" href="../../css/stile_networking.css">
+	<link rel="canonical" href="index.html" />
     </head>
     <body>
-<span id=titlename><a href="index.html">SubnettingPractice.com</a></span> The most extensive subnetting practice site on the web!
-		<ul id='nav'>
-			<li><a href='index.html'>Practice Questions</a></li>
-			<li><a href='ipv6.html'>IPv6 Subnetting</a></li>
-			<li><a href='subnets.html'>Basic Subnetting</a></li>
-			<li><a href='ipv6_subnetting.html'>IPv6 Calculator</a></li>
-			<li><a href='binary.html'>Binary Practice</a></li>
-			<li><a href='calc.html'>Subnetting Calculator</a></li>
-			<li><a href='vlsm.html'>VLSM Calculator</a></li>
-		</ul>
+
+      <div class="topnav" id="myTopnav">
+        <!--Questo è il menu responsive-->
+    			<a href='index.html' class="active">Subnetting</a>
+    			<a href='binary.html'>Binary Practice</a>
+          <a href='calculator.html'>Calculator</a>  <!--VLSM e bin/exa calculator -->
+          <a href='ethernet_wiring.html'>Ethernet Wiring Practice</a>
+          <a href='twos.html'>Exponent Practice</a>
+            <!--<a href='sixteens.html'>Multiples of Sixteen </a>-->
+          <a href='osi_layer.html'>OSI Layer Practice</a>
+          <a href='headers.html'>IP Header Practice</a>
+          <a href='teoria.html'>Teoria</a>
+              <!--<a href='howto.html'>How to Subnet</a>
+              <a href='howtoipv6.html'>How to Subnet IPv6</a>
+              <a href='cheatsheet.html'>Subnetting Cheatsheet</a>
+              <a href='ccna_commands.html'>Top CCNA Commands</a>
+              <a href='ip_allocation.html'>IPv4 v IPv6 Allocation</a>
+              <a href='ipv6_is_huge.html'>Incredible Size of IPv6</a>
+        -->
+
+
+        <a href="javascript:void(0);" class="icon" onclick="responsiveMenu()">
+          <i class="fa fa-bars"></i>
+        </a>
+      </div>
+
+
 		<h1>OSI Layer Model</h1>
 
-<div style="width: 100%;">
-<script async src="../pagead2.googlesyndication.com/pagead/js/f.txt"></script>
-<!-- subnetting-header-responsive -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-5214460626967121"
-     data-ad-slot="4650969699"
-     data-ad-format="horizontal"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
 
 		<p>The OSI Layer Model is composed to seven layers, each representing an abstract concept which is used in network communication. Each layer is served by the layer below it. Through traversing the OSI model, data is divided into segments, then packets then frames and then finally into individual bits. The data travels from the top of the model, to the bottom and then back to the top at the other end of the connection.</p>
 		<p>It is very important to be familiar with the OSI Model. Both for certifications, such as Netowk+ or CCNA, and for the real world. Network engineers will ofter say there they are seeing a 'Layer 2 problem' or they see an issue on the 'Network Layer'. You will look awfully silly if you do not know what they mean when they make such references. You should know and understand the different layers, along with which protocols live on which layer.</p>
@@ -69,59 +75,22 @@
 <p><button onclick='check6();'>Check TCP/IP</button></p>
 <div id='6ans'></div>
 
-<div style="width: 100%; padding-top: 16px;">
-<script async src="../pagead2.googlesyndication.com/pagead/js/f.txt"></script>
-<!-- subnetting-header-responsive -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-5214460626967121"
-     data-ad-slot="4650969699"
-     data-ad-format="auto"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
 
-<ul id='foot'>
-                        <li><a href='howto.html'>How to Subnet</a></li>
-                        <li><a href='howtoipv6.html'>How to Subnet IPv6</a></li>
-                        <li><a href='cheatsheet.html'>Subnetting Cheatsheet</a></li>
-                        <li><a href='binary_calc.html'>Binary/Hex Calculator</a></li>
-                        <li><a href='ethernet_wiring.html'>Ethernet Wiring Practice</a></li>
-                        <li><a href='ipv6_is_huge.html'>Incredible Size of IPv6</a></li>
-                        <li><a href='twos.html'>Exponent Practice</a></li>
-                        <li><a href='sixteens.html'>Multiples of Sixteen </a></li>
-                        <li><a href='osi_layer.html'>OSI Layer Practice</a></li>
-                        <li><a href='headers.html'>IP Header Practice</a></li>
-                        <li><a href='ip_allocation.html'>IPv4 v IPv6 Allocation</a></li>
-                        <li><a href='ccna_commands.html'>Top CCNA Commands</a></li>
-                        <li><a href='certs.html'>Networking Certificates</a></li>
-                        <li><a href='ccna_salary.html'>CCNA Salary Report</a></li>
-                       <li><a href='ccna_resources.html'>CCNA Resource List</a></li>
-                        <li><a href='jncia_ccna.html'>JNCIA v CCNA</a></li>
-                        <li><a href='contact.html'>Privacy Policy</a></li>
-<li><a href="https://www.facebook.com/sharer.php?u=http://subnettingpractice.com/osi_layer.html" target="_blank" class="share"><img src="images/facebook.png" alt="Facebook" /></a>
-<a href="https://www.linkedin.com/shareArticle?mini=true&amp;url=http://subnettingpractice.com/osi_layer.html" target="_blank" class="share"><img src="images/linkedin.png" alt="LinkedIn" /></a>
-<a href="https://twitter.com/share?url=http://subnettingpractice.com/osi_layer.html&amp;text=Learning%20the%20OSI%20Layer%20Model!" target="_blank" class="share"><img src="images/twitter.png" alt="Twitter" /></a>
-</li>
-                </ul>
-
-<small>Copyright 2014 SubnettingPractice.com. All rights reserved. <a href='contact.html'>Contact</a></small>
+<small>Copyright 2019. All rights reserved. <a href='contact.html'>Contact</a></small>
 <script type="text/javascript" src="osi_layer.mini.js"></script>
+
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','../www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-50427363-2', 'subnettingpractice.com');
-  ga('require', 'displayfeatures');
-  ga('send', 'pageview');
-
+  function responsiveMenu() {
+    var x = document.getElementById("myTopnav");
+    if (x.className === "topnav") {
+      x.className += " responsive";
+    } else {
+      x.className = "topnav";
+    }
+  }
 </script>
+
+
     </body>
 
-<!-- Mirrored from subnettingpractice.com/osi_layer.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 30 Sep 2019 15:26:37 GMT -->
 </html>
-
-
