Spostati i .js in una cartella separata, rimossi i files inutili

--- a/networking/esercizi_subnetting/binary.html
+++ b/networking/esercizi_subnetting/binary.html
@@ -75,7 +75,7 @@
 
 
 <small>Copyright 2019. All rights reserved</small>
-        <script type="text/javascript" src="binary.js"></script>
+        <script type="text/javascript" src="js/binary.js"></script>
 
         <script>
           function responsiveMenu() {
