--- a/networking/esercizi_subnetting/ethernet_wiring.html
+++ b/networking/esercizi_subnetting/ethernet_wiring.html
@@ -54,7 +54,7 @@ For a crossover cable, pins 1 and 2 are switched with 3 and 6.
 
 
 <small>Copyright 2019. All rights reserved</small>
-        <script type="text/javascript" src="ethernet_wiring.min.js"></script>
+        <script type="text/javascript" src="js/ethernet_wiring.min.js"></script>
 
         <script>
           function responsiveMenu() {
