--- a/networking/esercizi_subnetting/headers.html
+++ b/networking/esercizi_subnetting/headers.html
@@ -84,7 +84,7 @@
 
 
 <small>Copyright 2019. All rights reserved. <a href='contact.html'>Contact</a></small>
-<script type="text/javascript" src="headers.js"></script>
+<script type="text/javascript" src="js/headers.js"></script>
 <script>
   function responsiveMenu() {
     var x = document.getElementById("myTopnav");
