--- a/networking/esercizi_subnetting/index.html
+++ b/networking/esercizi_subnetting/index.html
@@ -94,8 +94,8 @@
 
 <!--Funzioni Javascript-->
 
-<script type="text/javascript" src="main.js"></script>
-<script type='text/javascript' src="subnets.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
+<script type='text/javascript' src="js/subnets.js"></script>
 
 <script>
   function responsiveMenu() {
