--- a/networking/esercizi_subnetting/teoria.html
+++ b/networking/esercizi_subnetting/teoria.html
@@ -835,7 +835,7 @@ Finally, just to put things into size perspectives, all the IPv4 address space i
 
 
 
-<script type='text/javascript' src=huge.js></script>
+<script type='text/javascript' src=js/huge.js></script>
 
 <script>
   function responsiveMenu() {
