--- a/networking/esercizi_subnetting/twos.html
+++ b/networking/esercizi_subnetting/twos.html
@@ -79,8 +79,8 @@
 
 
 <small>Copyright 2019. All rights reserved</small>
-        <script type="text/javascript" src="twos.js"></script>
-        <script type="text/javascript" src="sixteens.js"></script>
+        <script type="text/javascript" src="js/twos.js"></script>
+        <script type="text/javascript" src="js/sixteens.js"></script>
 
         <script>
           function responsiveMenu() {
