--- a/networking/esercizi_subnetting/osi_layer.html
+++ b/networking/esercizi_subnetting/osi_layer.html
@@ -77,7 +77,7 @@
 
 
 <small>Copyright 2019. All rights reserved. <a href='contact.html'>Contact</a></small>
-<script type="text/javascript" src="osi_layer.mini.js"></script>
+<script type="text/javascript" src="js/osi_layer.mini.js"></script>
 
 <script>
   function responsiveMenu() {
