Piccoli aggiustamenti alle pagine

--- a/networking/esercizi_subnetting/calculator.html
+++ b/networking/esercizi_subnetting/calculator.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
-
-<!-- Mirrored from subnettingpractice.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 30 Sep 2019 15:26:19 GMT -->
 <head>
-        <title>Subnetting</title>
+        <title>Calcolatori Subnet/Binario/Esadecimale</title>
 
 	<meta name=viewport content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -18,21 +16,11 @@
     			<a href='index.html' class="active">Subnetting</a>
     			<a href='binary.html'>Binary Practice</a>
           <a href='calculator.html'>Calculator</a>
-    			     <!--<a href='vlsm.html'>VLSM Calculator</a>
-               <a href='binary_calc.html'>Binary/Hex Calculator</a>-->
           <a href='ethernet_wiring.html'>Ethernet Wiring Practice</a>
           <a href='twos.html'>Exponent Practice</a>
-            <!--<a href='sixteens.html'>Multiples of Sixteen </a>-->
           <a href='osi_layer.html'>OSI Layer Practice</a>
           <a href='headers.html'>IP Header Practice</a>
           <a href='teoria.html'>Teoria</a>
-              <!--<a href='howto.html'>How to Subnet</a>
-              <a href='howtoipv6.html'>How to Subnet IPv6</a>
-              <a href='cheatsheet.html'>Subnetting Cheatsheet</a>
-              <a href='ccna_commands.html'>Top CCNA Commands</a>
-              <a href='ip_allocation.html'>IPv4 v IPv6 Allocation</a>
-              <a href='ipv6_is_huge.html'>Incredible Size of IPv6</a>
-        -->
 
 
         <a href="javascript:void(0);" class="icon" onclick="responsiveMenu()">
